--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@next/font": "13.4.1",
     "axios": "^1.4.0",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
+    "mongoose": "^8.8.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "web3": "^4.15.0",
     "web3modal": "^1.9.5"
+  },
+  "devDependencies": {
+    "hardhat": "^2.22.15"
   }
 }
