--- a/contract/package.json
+++ b/contract/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "chai": "^5.1.0",
+    "dotenv": "^16.4.5",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
     "hardhat": "^2.22.3"
